refactor(api): drop convocatorias domain and reduce Usuario to identity core
Expoideas reutiliza la arquitectura de Dattapro, no su dominio. Se retiran
las 36 entidades del sistema de convocatorias y del perfil docente
(competencias, idiomas, formacion, certificaciones, areas) junto con sus
repositorios, servicios, controladores y DTOs.

Quedan 7 entidades: Usuario, Sede, Facultad, ProgramaAcademico, Categoria,
Keyword y el enum RolUsuario.

Cambios de comportamiento:

- UsuarioResponseDTO ya no incluye el hash de la contrasena. La version de
  Dattapro lo exponia y GET /api/v1/usuarios era permitAll: bastaba una
  peticion sin autenticar para llevarse todos los hashes.
- GET /api/v1/usuarios y /api/v1/usuarios/* pasan a exigir sesion. Seguian
  filtrando el correo de todos los usuarios a cualquier anonimo.
- RolUsuario: profesor pasa a llamarse docente y se anaden emprendedor,
  mentor y visitante. directivo no se traslada. Deja de mapearse contra un
  ENUM de MySQL.
- Usuario.foto (MEDIUMBLOB) pasa a foto_url. El BLOB en la tabla de usuarios
  es inviable para un feed y excede el limite de 5 MB por archivo de TI.
- El registro ya no acepta el rol desde el cliente: toda cuenta nueva nace
  como emprendedor.
- actualizarDesdeAdmin resuelve sede y programa contra la base en vez de
  construir entidades sueltas con el id, para que un id inexistente falle
  con 404 y no como violacion de FK.
- listarUsuarios usa un fetch join y deja de disparar tres consultas por
  usuario al montar el DTO.
- Las rutas /categorias y /keywords pasan de ConvocatoriaController y
  KeywordController a MasterDataController, con la misma URL publica.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>